- Fix plugin declarations - Force maven 3 build - Add generation of site and technical reports switch by profile site-reports - Change Jenkins CI configuration to use m3 (JFI, but not in commit included)
See JAMES-1041


git-svn-id: https://svn.apache.org/repos/asf/james/server/trunk@1078324 13f79535-47bb-0310-9956-ffa450edef68